--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.18.1",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0",
-    "vue-js-modal": "^1.3.31"
+    "vue-js-modal": "^1.3.31",
+    "vue-upload-image": "^1.1.5"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
